fix layout bugs

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -85,7 +85,4 @@ p:empty {
   .navbar {
     order: 2;
   }
-  .list-group i {
-    display: none;
-  }
 }
